KC-7612 #comment Data structure defined
